Adapte api to recieved media_id and add update toWatch to Watched
